Bug 459325 - Keyboard shortcut change should be effective only after clicking the 'Apply' button
Summary: Keyboard shortcut change should be effective only after clicking the 'Apply' ...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwintabbox (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 463846 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-18 12:42 UTC by Patrick Silva
Modified: 2023-01-12 13:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-09-18 12:42:19 UTC
SUMMARY
Keyboard shortcut change should be effective only after clicking the 'Apply' button for consistency reasons,
because this is the behavior in Screen Locking and Notifications KCMs.

STEPS TO REPRODUCE
1. open Task Switcher KCM
2. click on any button used to set/change a keyboard shortcut
3. press the desired shortcut

OBSERVED RESULT
pressed shortcut is effective without click on 'Apply' button

EXPECTED RESULT
'Apply' button is activated after pressing the shortcut and the change is effective only after clicking on it

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-01-09 20:28:40 UTC
*** Bug 463846 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2023-01-11 00:18:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3417
Comment 3 Vlad Zahorodnii 2023-01-12 13:28:30 UTC
Git commit 76ac4be31632b436ea78611f07490c352a88b192 by Vlad Zahorodnii, on behalf of Ismael Asensio.
Committed on 12/01/2023 at 12:15.
Pushed by vladz into branch 'master'.

kcms/tabbox: Make shortcuts config save on apply

Currently, tabbox shortcuts are directly saved to KGlobalAccel
when they change, which is inconsistent with the rest of the
KCM and leads to confusion regarding Defaults and isSaveNeeded
status.

Let's instead manage the changes internally and just save them
to KGlobalAccel on Apply/Save.

m_actionsCollection is only used as a helpful way to store this
internal configuration, and doesn't really needs saving to
or restoring from config.
FIXED-IN: 5.27

M  +62   -42   src/kcms/tabbox/kwintabboxconfigform.cpp
M  +5    -2    src/kcms/tabbox/kwintabboxconfigform.h
M  +6    -0    src/kcms/tabbox/main.cpp

https://invent.kde.org/plasma/kwin/commit/76ac4be31632b436ea78611f07490c352a88b192